# esp32-mcp3564

./: README  get_idf.sh  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  gpio.c  main.h  main_mcp.c  spi.c  spi.h
